--- a/aquapi_camera_config.yaml
+++ b/aquapi_camera_config.yaml
@@ -1,7 +1,7 @@
 substitutions:
   # names
-  name: "aquapicamera"
-  friendly_name: "AquaPiCamera"
+  name: "aquapi_snapcam"
+  friendly_name: "AquaPi SnapCam"
   # App Version - Updated: 6/2024
   app_version: "2024.7.0"
 
