--- a/common/aquapi.yaml
+++ b/common/aquapi.yaml
@@ -1,7 +1,7 @@
 text_sensor: 
   # AquaPi Version
   - platform: template
-    name: "AquaPi Version"
+    name: "AquaPi SnapCam Version"
     id: aquapi_version
     icon: mdi:update
     update_interval: '365days'
@@ -16,5 +16,5 @@ text_sensor:
     icon: mdi:github
     update_interval: '365days'
     lambda: |-
-      return {"github.com/TheRealFalseReality/aquapi"};
+      return {"github.com/TheRealFalseReality/aquapi_snapcam"};
     entity_category: "diagnostic"
