--- a/static/_config.yml
+++ b/static/_config.yml
@@ -1,4 +1,4 @@
 # CHANGEME: Set these variable to your liking
-title: ESPHome Project Template
+title: ESP SnapCam
 description: Powered by ESPHome and ESP Web Tools
 theme: jekyll-theme-slate
