--- a/aquapi_camera_config.yaml
+++ b/aquapi_camera_config.yaml
@@ -5,7 +5,7 @@ substitutions:
   app_version: "24.11.1.1"
 
 packages:
-  device_base_camera: !include common/device_base.yaml
+  device_base_camera: !include common/device_base_camera.yaml
   aquapi: !include common/aquapi.yaml
   ota_https: !include common/ota_https.yaml
   # debug: !include common/debug.yaml
