--- a/common/aquapi.yaml
+++ b/common/aquapi.yaml
@@ -1,3 +1,48 @@
+substitutions:
+  # Import Config
+  import_config: "false"
+
+  sorting_group_misc_weight: '97'
+  sorting_group_diagnostic_weight: '98'
+  sorting_group_config_weight: '99'
+
+esphome:
+  min_version: 2024.6.0
+  name: "${name}"
+  friendly_name: "${friendly_name}"
+  # Automatically add the mac address to the name
+  name_add_mac_suffix: true
+  comment: "AquaPiCam ESP32 - AquaPi SnapCam"
+  project:
+    name: therealfalsereality.aquapi_snapcam
+    version: "${app_version}"
+  on_boot: 
+    then:
+      - light.turn_on: camera_led
+      - delay: 500ms
+      - light.turn_off: camera_led
+      - delay: 500ms
+      - light.turn_on: camera_led
+      - delay: 500ms
+      - light.turn_off: camera_led
+
+dashboard_import:
+  package_import_url: github://TheRealFalseReality/esp32_snapcam/aquapi_camera_config.yaml@main
+  import_full_config: "${import_config}"
+
+web_server:
+  version: 3
+  sorting_groups:
+    - id: sorting_group_diagnostic
+      name: "AquaPi SnapCam Diagnostic"
+      sorting_weight: ${sorting_group_diagnostic_weight}
+    - id: sorting_group_config
+      name: "AquaPi SnapCam Configuration"
+      sorting_weight: ${sorting_group_config_weight}
+    - id: sorting_group_misc
+      name: "Misc. Sensors"
+      sorting_weight: ${sorting_group_misc_weight}
+
 text_sensor: 
   # AquaPi Version
   - platform: template
