--- a/aquapi_camera_config.yaml
+++ b/aquapi_camera_config.yaml
@@ -1,8 +1,8 @@
 substitutions:
   # names
-  name: "aquapi_snapcam"
+  name: "aquapi-snapcam"
   friendly_name: "AquaPi SnapCam"
-  app_version: "24.11.1.1"
+  app_version: "25.2"
 
 packages:
   device_base_camera: !include common/device_base_camera.yaml
